[gd_scene load_steps=18 format=3 uid="uid://cmsjltvqddcom"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_1o672"]
[ext_resource type="PackedScene" uid="uid://cwtg7ry4qh2gk" path="res://resources/character_customization/skeleton.glb" id="1_kuovo"]
[ext_resource type="PackedScene" uid="uid://b2b2ujij0gqg4" path="res://resources/character_customization/hair/hair_01/hair_01.gltf" id="2_ulvvh"]
[ext_resource type="PackedScene" uid="uid://c1uojvj4o87ml" path="res://resources/character_customization/heads/head_01/head_01.gltf" id="3_1tsx0"]
[ext_resource type="Script" path="res://scripts/character_customization_handler.gd" id="3_qjg83"]
[ext_resource type="PackedScene" uid="uid://c6557u3g3tni4" path="res://resources/character_customization/bodies/body_01/body_01.gltf" id="4_0hs27"]
[ext_resource type="PackedScene" uid="uid://cbtggxabm1us8" path="res://resources/character_customization/hair/hair_02/hair_02.gltf" id="4_pqe2f"]
[ext_resource type="PackedScene" uid="uid://313jdsluauoo" path="res://resources/character_customization/hair/hair_03/hair_03.gltf" id="5_pym6k"]
[ext_resource type="PackedScene" uid="uid://dppq0g48atmab" path="res://resources/character_customization/hands/hand_01/hand_01.gltf" id="5_qt01d"]
[ext_resource type="PackedScene" uid="uid://71x5wlvqo68y" path="res://resources/character_customization/feet/foot_01/foot_01.gltf" id="6_jc160"]
[ext_resource type="PackedScene" uid="uid://c6d3xslhdase1" path="res://resources/character_customization/hair/hair_04/hair_04.gltf" id="6_yvfet"]
[ext_resource type="PackedScene" uid="uid://dantplraqhl2c" path="res://resources/character_customization/hair/hair_05/hair_05.gltf" id="7_nxc06"]
[ext_resource type="Material" uid="uid://b7w8010tceypg" path="res://resources/run-particles.tres" id="8_rp4du"]
[ext_resource type="Script" path="res://scripts/player/spring_arm.gd" id="8_u7vhn"]
[ext_resource type="Script" path="res://scripts/player/player_character_input.gd" id="9_0laet"]

[sub_resource type="SphereMesh" id="SphereMesh_eovla"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qfchf"]
radius = 0.476333
height = 2.21625

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_1o672")

[node name="Character" parent="." instance=ExtResource("1_kuovo")]
script = ExtResource("3_qjg83")

[node name="Armature" parent="Character" index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="Character/Armature" index="0"]
bones/0/rotation = Quaternion(0.707107, -5.33851e-08, -5.33851e-08, 0.707107)
bones/2/rotation = Quaternion(0.707107, -5.32845e-08, -5.32845e-08, 0.707107)
bones/3/rotation = Quaternion(0.707107, -5.32845e-08, -5.32845e-08, 0.707107)

[node name="Hair" type="BoneAttachment3D" parent="Character/Armature/Skeleton3D" index="0"]
transform = Transform3D(1, -2.2153e-10, 0, 2.2153e-10, 1, -3.6053e-14, 0, 1.20661e-16, 1, -0.00237339, 1.05901, 1.04595e-07)
bone_name = "Head"
bone_idx = 4

[node name="Transform" type="Node3D" parent="Character/Armature/Skeleton3D/Hair"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000509031, 0.529077, -0.000797987)

[node name="hair_01" parent="Character/Armature/Skeleton3D/Hair/Transform" instance=ExtResource("2_ulvvh")]

[node name="hair_02" parent="Character/Armature/Skeleton3D/Hair/Transform" instance=ExtResource("4_pqe2f")]
transform = Transform3D(1, -1.22418e-23, 0, -3.15355e-21, 1, 0, 0, 0, 1, -0.000509031, -0.00123107, 0.000797987)
visible = false

[node name="hair_03" parent="Character/Armature/Skeleton3D/Hair/Transform" instance=ExtResource("5_pym6k")]
transform = Transform3D(1, -1.22418e-23, 0, -3.15355e-21, 1, 0, 0, 0, 1, -0.000509031, -0.00123107, 0.000797987)
visible = false

[node name="hair_04" parent="Character/Armature/Skeleton3D/Hair/Transform" instance=ExtResource("6_yvfet")]
transform = Transform3D(1, -1.22418e-23, 0, -3.15355e-21, 1, 0, 0, 0, 1, -0.000509031, -0.00123107, 0.000797987)
visible = false

[node name="hair_05" parent="Character/Armature/Skeleton3D/Hair/Transform" instance=ExtResource("7_nxc06")]
transform = Transform3D(1, -1.22418e-23, 0, -3.15355e-21, 1, 0, 0, 0, 1, -0.000509031, -0.00123107, 0.000797987)
visible = false

[node name="Head" type="BoneAttachment3D" parent="Character/Armature/Skeleton3D" index="1"]
transform = Transform3D(1, -2.2153e-10, 0, 2.2153e-10, 1, -3.6053e-14, 0, 1.20661e-16, 1, -0.00237339, 1.05901, 1.04595e-07)
bone_name = "Head"
bone_idx = 4

[node name="Transform" type="Node3D" parent="Character/Armature/Skeleton3D/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.32831e-10, 0.527846, 0)

[node name="head_01" parent="Character/Armature/Skeleton3D/Head/Transform" instance=ExtResource("3_1tsx0")]

[node name="Body" type="BoneAttachment3D" parent="Character/Armature/Skeleton3D" index="2"]
transform = Transform3D(1, 2.84558e-10, 2.38419e-07, -2.84558e-10, 1, -3.60002e-14, -2.38419e-07, 0, 1, 0, 0.271337, 0)
bone_name = "Body"
bone_idx = 1

[node name="Transform" type="Node3D" parent="Character/Armature/Skeleton3D/Body"]
transform = Transform3D(1, 4.86974e-34, 0, -8.56694e-21, 1, 0, 0, -2.04252e-27, 1, -6.93889e-18, 1.329, -9.92617e-24)

[node name="body_01" parent="Character/Armature/Skeleton3D/Body/Transform" instance=ExtResource("4_0hs27")]

[node name="LeftHand" type="BoneAttachment3D" parent="Character/Armature/Skeleton3D" index="3"]
transform = Transform3D(1, 2.38419e-07, -1.50996e-07, -1.50996e-07, -3.60002e-14, -1, -2.38419e-07, 1, 3.59324e-14, 0.534013, 0.649523, -0.101297)
bone_name = "Hand.L"
bone_idx = 2

[node name="Transform" type="Node3D" parent="Character/Armature/Skeleton3D/LeftHand"]
transform = Transform3D(1, -2.8431e-15, 0, 0, 1.19249e-08, 1, -8.07793e-28, -1, 1.19249e-08, 0.964617, 0.0528166, -0.957391)

[node name="hand_01" parent="Character/Armature/Skeleton3D/LeftHand/Transform" instance=ExtResource("5_qt01d")]

[node name="RightHand" type="BoneAttachment3D" parent="Character/Armature/Skeleton3D" index="4"]
transform = Transform3D(1, 2.38419e-07, -1.50996e-07, -1.50996e-07, -3.60002e-14, -1, -2.38419e-07, 1, 3.59324e-14, -0.553, 0.649523, -0.101297)
bone_name = "Hand.R"
bone_idx = 3

[node name="Transform" type="Node3D" parent="Character/Armature/Skeleton3D/RightHand"]
transform = Transform3D(1, -2.8431e-15, 0, 0, 1.19249e-08, 1, -8.07793e-28, -1, 1.19249e-08, 0.551673, 0.0528166, -0.957391)

[node name="hand_01" parent="Character/Armature/Skeleton3D/RightHand/Transform" instance=ExtResource("5_qt01d")]

[node name="LeftFoot" type="BoneAttachment3D" parent="Character/Armature/Skeleton3D" index="5"]
transform = Transform3D(1, 0, -1.50996e-07, -1.50996e-07, 0, -1, 0, 1, 0, 0.289554, 0.108391, -0.0850061)
bone_name = "Foot.L"
bone_idx = 6

[node name="Transform" type="Node3D" parent="Character/Armature/Skeleton3D/LeftFoot"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.408894, 0.178666, -1.48968)

[node name="foot_01" parent="Character/Armature/Skeleton3D/LeftFoot/Transform" instance=ExtResource("6_jc160")]

[node name="RightFoot" type="BoneAttachment3D" parent="Character/Armature/Skeleton3D" index="6"]
transform = Transform3D(1, 0, -1.50996e-07, -1.50996e-07, 0, -1, 0, 1, 0, -0.299047, 0.108391, -0.0850061)
bone_name = "Foot.R"
bone_idx = 5

[node name="Transform" type="Node3D" parent="Character/Armature/Skeleton3D/RightFoot"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.407477, 0.178666, -1.49251)

[node name="foot_01" parent="Character/Armature/Skeleton3D/RightFoot/Transform" instance=ExtResource("6_jc160")]

[node name="ParticleSystem" type="GPUParticles3D" parent="Character"]
emitting = false
amount = 30
process_material = ExtResource("8_rp4du")
draw_pass_1 = SubResource("SphereMesh_eovla")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13179, 0)
shape = SubResource("CapsuleShape3D_qfchf")

[node name="CameraArm" type="SpringArm3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, -3.35116e-08, 0.923612, 0.383328, 8.07447e-08, 0.383328, -0.923612, 0, 2.89899, -2.79833)
collision_mask = 0
spring_length = 10.0
margin = 0.1
script = ExtResource("8_u7vhn")

[node name="Camera" type="Camera3D" parent="CameraArm"]

[node name="PlayerCharacterInput" type="Node" parent="."]
script = ExtResource("9_0laet")

[editable path="Character"]
[editable path="Character/Armature/Skeleton3D/Hair/Transform/hair_01"]
